<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".ui.register.RegisterActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgBack"
            app:cardBackgroundColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginVertical="@dimen/dp32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtRegister"
            fontPath="font/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:text="@string/str_register"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/imgBack"
            app:layout_constraintTop_toBottomOf="@+id/imgBack" />

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/str_input"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/sp14"
            app:layout_constraintStart_toStartOf="@+id/txtRegister"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

        <com.base.app.ui.custom.InputEdittextCustom
            android:id="@+id/edtInputName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp20"
            app:hintEditText="@string/str_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInput"
            app:titleEditText="@string/str_name" />

        <com.base.app.ui.custom.InputEdittextCustom
            android:id="@+id/edtInputUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            app:hintEditText="@string/str_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInputName"
            app:titleEditText="@string/str_user_name" />

        <com.base.app.ui.custom.InputEdittextCustom
            android:id="@+id/edtInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            app:hintEditText="@string/str_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInputUserName"
            app:titleEditText="@string/str_email" />

        <com.base.app.ui.custom.InputEdittextCustom
            android:id="@+id/edtInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp16"
            app:hintEditText="@string/str_password"
            app:inputPass="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInputEmail"
            app:titleEditText="@string/str_password" />

        <Button
            android:id="@+id/btnRegister"
            fontPath="font/Roboto-Medium.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp32"
            android:layout_marginTop="@dimen/dp65"
            android:background="@drawable/bg_btn"
            android:text="@string/str_register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInputPassword" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:textSize="@dimen/sp14"
            android:textStyle="normal"
            android:textColor="@color/color_app_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            tools:text="Da co tai khoan dang nhap ngay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>