<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp16"
        android:paddingEnd="@dimen/dp16"
        android:paddingBottom="@dimen/dp20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_wallet_balance"
            android:padding="@dimen/dp20">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_fill_in_login_password"
                android:textColor="@color/color_body_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.base.app.ui.custom.InputEdittextCustom
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintEditText="@string/str_password"
                app:titleEditText="@string/str_password"
                android:layout_marginTop="@dimen/dp16"
                app:inputPass="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_close"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:background="@drawable/bg_wallet_balance"
            android:gravity="center"
            android:paddingStart="@dimen/dp28"
            android:paddingTop="@dimen/dp14"
            android:paddingEnd="@dimen/dp28"
            android:paddingBottom="@dimen/dp14"
            android:text="@string/str_close"
            android:textColor="@color/color_body_text"
            android:textSize="@dimen/sp14"
            app:drawableStartCompat="@drawable/ic_cancel" />
    </LinearLayout>
</layout>
