<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.splash.WelcomeActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/astrosplash"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtWelcome"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_welcome"
            android:textColor="#001664"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtStartRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintVertical_bias="0.1" />

        <Button
            android:id="@+id/btnLogin"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp56"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/bg_btn_green"
            android:text="@string/dang_nhap"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

        <TextView
            android:id="@+id/txtStartRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/str_start_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>