<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_unfocus_12dp"
            android:backgroundTint="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_message"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:gravity="center"
                android:text="@string/str_dialog_set_pin"
                android:textColor="@color/color_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:background="@drawable/bg_wallet_balance"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp24"
                    android:layout_marginEnd="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp24"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_white"
                    android:elevation="@dimen/dp1"
                    android:gravity="center"
                    android:padding="@dimen/dp8"
                    android:text="@string/str_cancel"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/tv_agree"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp24"
                    android:elevation="@dimen/dp1"
                    android:layout_marginBottom="@dimen/dp24"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn"
                    android:gravity="center"
                    android:padding="@dimen/dp8"
                    android:text="@string/str_agree"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp16" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
